[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.94385
margin_right = 1032.06
margin_bottom = 609.0
color = Color( 0.27451, 0.282353, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 371.428
margin_top = 147.811
margin_right = 414.428
margin_bottom = 164.811
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 364.561
margin_top = 220.0
margin_right = 416.561
margin_bottom = 246.0
text = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 496.0
margin_top = 145.0
margin_right = 616.0
margin_bottom = 169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 496.0
margin_top = 216.0
margin_right = 616.0
margin_bottom = 240.0

[node name="Join" type="Button" parent="."]
margin_left = 434.22
margin_top = 439.581
margin_right = 591.22
margin_bottom = 475.581
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
